--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-BASE_URL_LOCAL=http://localhost:1475/api
-BASE_URL_ATM=http://161.132.47.45:1475/api
+#BASE_URL_LOCAL=https://atmosfera-soltec.online:8453/api
+BASE_URL_LOCAL=https://atmosfera-soltec.online:8453/api
+BASE_URL_ATM=https://atmosfera-soltec.online:8453/api
