--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,19 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
+  flutter_secure_storage: ^9.2.4
   get_it: ^8.0.3
+  intl: ^0.20.2
   json_annotation: ^4.9.0
+  logger: ^2.6.1
   pretty_dio_logger: ^1.4.0
   provider: ^6.1.5
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   build_runner: ^2.6.0
